--- a/css/masterstyle.css
+++ b/css/masterstyle.css
@@ -24,11 +24,15 @@ nav,section,footer,article,aside{
     position: absolute;
     left: 20%;
     top: 4%;
+    width: 120px; 
+    height: 120px;
 }
 .segundaimagen{
 position: absolute;
 left: 80%;
 top: 5%;
+width: 120px; 
+height: 120px;
 }
 article,aside{
  width: 40%;
