--- a/css/masterstyle.css
+++ b/css/masterstyle.css
@@ -19,15 +19,14 @@ nav,section,footer,article,aside{
     border-radius: 10px;
     padding: 1rem;
 }
-.imagenipn{
-
+.imagenipn img{
     position: absolute;
     left: 20%;
     top: 4%;
     width: 120px; 
     height: 120px;
 }
-.segundaimagen{
+.segundaimagen img{
 position: absolute;
 left: 80%;
 top: 5%;
