--- a/css/masterstyle.css
+++ b/css/masterstyle.css
@@ -26,7 +26,7 @@ nav,section,footer,article,aside{
     width: 120px; 
     height: 120px;
 }
-.segundaimagen img{
+.segundaimagen2 img{
 position: absolute;
 left: 80%;
 top: 5%;
