--- a/css/estilomenu.css
+++ b/css/estilomenu.css
@@ -146,3 +146,38 @@ background-color: rgb(182, 225, 236);
        opacity: 0;
    }
 }
+
+/*menu desplegable */
+
+
+                  
+    .menusito li{
+    list-style-type:none;
+    position:relative;
+    width:120px;
+    }
+                
+    .menusito li a{
+    text-decoration:none;
+    display:inline-block;
+   
+   
+    border:1px solid rgb(255, 0, 0);
+    color:#fff;
+    background-color:rgb(255, 255, 255);
+    }
+            
+    .menusito li a:hover{
+    color:#000;
+    background-color:#fff;
+                
+    }
+    
+    .menusito nav li ul{
+        display:none;
+        position:absolute;
+        top:0px;
+        left:120px;
+    }
+            
+    .menusito nav li:hover ul{display:grid;}
